// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UI Components Snapshot Tests > Alert > should match snapshot - default 1`] = `
<div>
  <div
    class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground bg-background text-foreground"
    role="alert"
  >
    <h5
      class="mb-1 font-medium leading-none tracking-tight"
    >
      Alert Title
    </h5>
    <div
      class="text-sm [&_p]:leading-relaxed"
    >
      This is an alert description.
    </div>
  </div>
</div>
`;

exports[`UI Components Snapshot Tests > Alert > should match snapshot - destructive 1`] = `
<div>
  <div
    class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 border-destructive/50 text-destructive dark:border-destructive [&>svg]:text-destructive"
    role="alert"
  >
    <h5
      class="mb-1 font-medium leading-none tracking-tight"
    >
      Error
    </h5>
    <div
      class="text-sm [&_p]:leading-relaxed"
    >
      Something went wrong.
    </div>
  </div>
</div>
`;

exports[`UI Components Snapshot Tests > Avatar > should match snapshot - with fallback 1`] = `
<div>
  <span
    class="relative flex h-10 w-10 shrink-0 overflow-hidden rounded-full"
  >
    <span
      class="flex h-full w-full items-center justify-center rounded-full bg-muted"
    >
      JD
    </span>
  </span>
</div>
`;

exports[`UI Components Snapshot Tests > Avatar > should match snapshot - with image 1`] = `
<div>
  <span
    class="relative flex h-10 w-10 shrink-0 overflow-hidden rounded-full"
  >
    <span
      class="flex h-full w-full items-center justify-center rounded-full bg-muted"
    >
      JD
    </span>
  </span>
</div>
`;

exports[`UI Components Snapshot Tests > Badge > should match snapshot - default variant 1`] = `
<div>
  <div
    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80"
  >
    Default
  </div>
</div>
`;

exports[`UI Components Snapshot Tests > Badge > should match snapshot - destructive variant 1`] = `
<div>
  <div
    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground hover:bg-destructive/80"
  >
    Destructive
  </div>
</div>
`;

exports[`UI Components Snapshot Tests > Badge > should match snapshot - outline variant 1`] = `
<div>
  <div
    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
  >
    Outline
  </div>
</div>
`;

exports[`UI Components Snapshot Tests > Badge > should match snapshot - secondary variant 1`] = `
<div>
  <div
    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
  >
    Secondary
  </div>
</div>
`;

exports[`UI Components Snapshot Tests > Button > should match snapshot - default variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
  >
    Click me
  </button>
</div>
`;

exports[`UI Components Snapshot Tests > Button > should match snapshot - destructive variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-destructive text-destructive-foreground hover:bg-destructive/90 h-10 px-4 py-2"
  >
    Delete
  </button>
</div>
`;

exports[`UI Components Snapshot Tests > Button > should match snapshot - different sizes 1`] = `
<div>
  <div>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-9 rounded-md px-3"
    >
      Small
    </button>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
    >
      Default
    </button>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-11 rounded-md px-8"
    >
      Large
    </button>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 w-10"
    >
      🔍
    </button>
  </div>
</div>
`;

exports[`UI Components Snapshot Tests > Button > should match snapshot - disabled state 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
    disabled=""
  >
    Disabled
  </button>
</div>
`;

exports[`UI Components Snapshot Tests > Button > should match snapshot - ghost variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2"
  >
    Ghost
  </button>
</div>
`;

exports[`UI Components Snapshot Tests > Button > should match snapshot - link variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-primary underline-offset-4 hover:underline h-10 px-4 py-2"
  >
    Link
  </button>
</div>
`;

exports[`UI Components Snapshot Tests > Button > should match snapshot - outline variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2"
  >
    Outline
  </button>
</div>
`;

exports[`UI Components Snapshot Tests > Card > should match snapshot - full card structure 1`] = `
<div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight"
      >
        Card Title
      </h3>
      <p
        class="text-sm text-muted-foreground"
      >
        Card description goes here
      </p>
    </div>
    <div
      class="p-6 pt-0"
    >
      <p>
        Card content
      </p>
    </div>
    <div
      class="flex items-center p-6 pt-0"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
      >
        Action
      </button>
    </div>
  </div>
</div>
`;

exports[`UI Components Snapshot Tests > Card > should match snapshot - minimal card 1`] = `
<div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="p-6 pt-0"
    >
      Simple content
    </div>
  </div>
</div>
`;

exports[`UI Components Snapshot Tests > Checkbox > should match snapshot - checked 1`] = `
<div>
  <button
    aria-checked="true"
    class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
    data-state="checked"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="flex items-center justify-center text-current"
      data-state="checked"
      style="pointer-events: none;"
    >
      <svg
        class="lucide lucide-check h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`UI Components Snapshot Tests > Checkbox > should match snapshot - disabled 1`] = `
<div>
  <button
    aria-checked="false"
    class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
    data-disabled=""
    data-state="unchecked"
    disabled=""
    role="checkbox"
    type="button"
    value="on"
  />
</div>
`;

exports[`UI Components Snapshot Tests > Checkbox > should match snapshot - unchecked 1`] = `
<div>
  <button
    aria-checked="false"
    class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
  />
</div>
`;

exports[`UI Components Snapshot Tests > Input > should match snapshot - default input 1`] = `
<div>
  <input
    class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
    placeholder="Enter text..."
  />
</div>
`;

exports[`UI Components Snapshot Tests > Input > should match snapshot - different types 1`] = `
<div>
  <div>
    <input
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
      placeholder="Text"
      type="text"
    />
    <input
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
      placeholder="Email"
      type="email"
    />
    <input
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
      placeholder="Password"
      type="password"
    />
    <input
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
      placeholder="Number"
      type="number"
    />
  </div>
</div>
`;

exports[`UI Components Snapshot Tests > Input > should match snapshot - disabled state 1`] = `
<div>
  <input
    class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
    disabled=""
    placeholder="Disabled"
  />
</div>
`;

exports[`UI Components Snapshot Tests > Input > should match snapshot - with value 1`] = `
<div>
  <input
    class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
    readonly=""
    value="Some value"
  />
</div>
`;

exports[`UI Components Snapshot Tests > Label > should match snapshot 1`] = `
<div>
  <label
    class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
    for="email"
  >
    Email Address
  </label>
</div>
`;

exports[`UI Components Snapshot Tests > Progress > should match snapshot - 0% 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="relative h-4 w-full overflow-hidden rounded-full bg-secondary"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="indeterminate"
      style="transform: translateX(-100%);"
    />
  </div>
</div>
`;

exports[`UI Components Snapshot Tests > Progress > should match snapshot - 50% 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="relative h-4 w-full overflow-hidden rounded-full bg-secondary"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="indeterminate"
      style="transform: translateX(-50%);"
    />
  </div>
</div>
`;

exports[`UI Components Snapshot Tests > Progress > should match snapshot - 100% 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="relative h-4 w-full overflow-hidden rounded-full bg-secondary"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="indeterminate"
      style="transform: translateX(-0%);"
    />
  </div>
</div>
`;

exports[`UI Components Snapshot Tests > Separator > should match snapshot - horizontal 1`] = `
<div>
  <div
    class="shrink-0 bg-border h-[1px] w-full"
    data-orientation="horizontal"
    role="none"
  />
</div>
`;

exports[`UI Components Snapshot Tests > Separator > should match snapshot - vertical 1`] = `
<div>
  <div
    style="height: 100px;"
  >
    <div
      class="shrink-0 bg-border h-full w-[1px]"
      data-orientation="vertical"
      role="none"
    />
  </div>
</div>
`;

exports[`UI Components Snapshot Tests > Skeleton > should match snapshot - avatar skeleton 1`] = `
<div>
  <div
    class="animate-pulse bg-muted h-12 w-12 rounded-full"
  />
</div>
`;

exports[`UI Components Snapshot Tests > Skeleton > should match snapshot - default 1`] = `
<div>
  <div
    class="animate-pulse rounded-md bg-muted w-full h-4"
  />
</div>
`;

exports[`UI Components Snapshot Tests > Switch > should match snapshot - checked 1`] = `
<div>
  <button
    aria-checked="true"
    class="peer inline-flex h-6 w-11 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
    data-state="checked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="pointer-events-none block h-5 w-5 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-5 data-[state=unchecked]:translate-x-0"
      data-state="checked"
    />
  </button>
</div>
`;

exports[`UI Components Snapshot Tests > Switch > should match snapshot - disabled 1`] = `
<div>
  <button
    aria-checked="false"
    class="peer inline-flex h-6 w-11 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
    data-disabled=""
    data-state="unchecked"
    disabled=""
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="pointer-events-none block h-5 w-5 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-5 data-[state=unchecked]:translate-x-0"
      data-disabled=""
      data-state="unchecked"
    />
  </button>
</div>
`;

exports[`UI Components Snapshot Tests > Switch > should match snapshot - unchecked 1`] = `
<div>
  <button
    aria-checked="false"
    class="peer inline-flex h-6 w-11 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
    data-state="unchecked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="pointer-events-none block h-5 w-5 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-5 data-[state=unchecked]:translate-x-0"
      data-state="unchecked"
    />
  </button>
</div>
`;

exports[`UI Components Snapshot Tests > Table > should match snapshot - full table 1`] = `
<div>
  <div
    class="relative w-full overflow-auto"
  >
    <table
      class="w-full caption-bottom text-sm"
    >
      <caption
        class="mt-4 text-sm text-muted-foreground"
      >
        A list of users
      </caption>
      <thead
        class="[&_tr]:border-b"
      >
        <tr
          class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
        >
          <th
            class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0"
          >
            Name
          </th>
          <th
            class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0"
          >
            Email
          </th>
          <th
            class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0"
          >
            Status
          </th>
        </tr>
      </thead>
      <tbody
        class="[&_tr:last-child]:border-0"
      >
        <tr
          class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
        >
          <td
            class="p-4 align-middle [&:has([role=checkbox])]:pr-0"
          >
            John Doe
          </td>
          <td
            class="p-4 align-middle [&:has([role=checkbox])]:pr-0"
          >
            john@example.com
          </td>
          <td
            class="p-4 align-middle [&:has([role=checkbox])]:pr-0"
          >
            Active
          </td>
        </tr>
        <tr
          class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
        >
          <td
            class="p-4 align-middle [&:has([role=checkbox])]:pr-0"
          >
            Jane Smith
          </td>
          <td
            class="p-4 align-middle [&:has([role=checkbox])]:pr-0"
          >
            jane@example.com
          </td>
          <td
            class="p-4 align-middle [&:has([role=checkbox])]:pr-0"
          >
            Inactive
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`UI Components Snapshot Tests > Tabs > should match snapshot 1`] = `
<div>
  <div
    data-orientation="horizontal"
    dir="ltr"
  >
    <div
      aria-orientation="horizontal"
      class="inline-flex h-10 items-center justify-center rounded-md bg-muted p-1 text-muted-foreground"
      data-orientation="horizontal"
      role="tablist"
      style="outline: none;"
      tabindex="0"
    >
      <button
        aria-controls="radix-:r0:-content-tab1"
        aria-selected="true"
        class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="active"
        id="radix-:r0:-trigger-tab1"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 1
      </button>
      <button
        aria-controls="radix-:r0:-content-tab2"
        aria-selected="false"
        class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="inactive"
        id="radix-:r0:-trigger-tab2"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 2
      </button>
      <button
        aria-controls="radix-:r0:-content-tab3"
        aria-selected="false"
        class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="inactive"
        id="radix-:r0:-trigger-tab3"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 3
      </button>
    </div>
    <div
      aria-labelledby="radix-:r0:-trigger-tab1"
      class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      data-orientation="horizontal"
      data-state="active"
      id="radix-:r0:-content-tab1"
      role="tabpanel"
      style="animation-duration: 0s;"
      tabindex="0"
    >
      Content 1
    </div>
    <div
      aria-labelledby="radix-:r0:-trigger-tab2"
      class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-:r0:-content-tab2"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-labelledby="radix-:r0:-trigger-tab3"
      class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-:r0:-content-tab3"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`UI Components Snapshot Tests > Textarea > should match snapshot - default 1`] = `
<div>
  <textarea
    class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
    placeholder="Enter description..."
  />
</div>
`;

exports[`UI Components Snapshot Tests > Textarea > should match snapshot - disabled 1`] = `
<div>
  <textarea
    class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
    disabled=""
    placeholder="Disabled"
  />
</div>
`;

exports[`UI Components Snapshot Tests > Toggle > should match snapshot - default 1`] = `
<div>
  <button
    aria-pressed="false"
    class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground bg-transparent h-10 px-3"
    data-state="off"
    type="button"
  >
    Toggle
  </button>
</div>
`;

exports[`UI Components Snapshot Tests > Toggle > should match snapshot - outline variant 1`] = `
<div>
  <button
    aria-pressed="false"
    class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground border border-input bg-transparent hover:bg-accent hover:text-accent-foreground h-10 px-3"
    data-state="off"
    type="button"
  >
    Outline
  </button>
</div>
`;

exports[`UI Components Snapshot Tests > Toggle > should match snapshot - pressed 1`] = `
<div>
  <button
    aria-pressed="true"
    class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground bg-transparent h-10 px-3"
    data-state="on"
    type="button"
  >
    Pressed
  </button>
</div>
`;
